# smultron

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  OS_STATE.md  README.md
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  elf_loader.rs  gdt.rs  interrupts.rs  keyboard.rs  main.rs  memory.rs  process.rs  serial.rs  syscall.rs  user.rs  vfs.rs  vga_buffer.rs
tests/: harness.py  requirements.txt  test_harness.py
tools/: mk_initrd.sh
userspace/apps/cat/: Cargo.toml
userspace/apps/cat/src/: lib.rs  main.rs
userspace/apps/echo/: Cargo.toml
userspace/apps/echo/src/: lib.rs  main.rs
userspace/apps/env/: Cargo.toml
userspace/apps/env/src/: lib.rs  main.rs
userspace/apps/init/: Cargo.toml
userspace/apps/init/src/: lib.rs  main.rs
userspace/apps/ls/: Cargo.toml
userspace/apps/ls/src/: lib.rs  main.rs
userspace/apps/sed/: Cargo.toml
userspace/apps/sed/src/: lib.rs  main.rs
userspace/apps/tee/: Cargo.toml
userspace/apps/tee/src/: lib.rs  main.rs
userspace/libos/: Cargo.toml
userspace/libos/src/: lib.rs
