[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.34", features = ["map_physical_memory"] }
volatile = "0.2"
spin = "0.9"
uart_16550 = "0.3"
x86_64 = "0.14"
pic8259 = "0.11"
pc-keyboard = "0.7"
linked_list_allocator = "0.10"
lazy_static = { version = "1.4", features = ["spin_no_std"] }

[package.metadata.bootimage]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial", "stdio",
  "-display", "none"
]
run-args = [
  "-serial", "stdio",
  "-qmp", "tcp:127.0.0.1:4444,server,nowait"
]
test-success-exit-code = 33
